Release 1.2-rc3
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/tags/WICKET_1_2_RC3@460466 13f79535-47bb-0310-9956-ffa450edef68